syntax = "proto3";

package game_proto;
option go_package="../game_proto";

message Pos {
	int32 X = 1;
	int32 Y = 2;
}

// 坦克信息
message TankInfo {
	int32 Id = 1;
	uint32 InstId = 2;
	int32 Level = 3;
	Pos CurrPos = 4;
	int32 Direction = 5;
	int32 CurrSpeed = 6;
}

// 坦克移动信息
message TankMoveInfo {
	Pos CurrPos = 1;
	int32 Direction = 2;
	int32 CurrSpeed = 3;
	int64 CurrTimeMilliseconds = 4;
}

// 玩家坦克信息
message PlayerTankInfo {
	uint64 PlayerId = 1;
	TankInfo TankInfo = 2;
}

// 玩家帐号和坦克信息
message PlayerAccountTankInfo {
	uint64 PlayerId = 1;
	string Account = 2;
	TankInfo TankInfo = 3;
}